@@ -2,20 +2,19 @@ package com.abc.location.service.impl;
 
 import com.abc.location.common.CommonResponse;
 import com.abc.location.dao.LocationMapper;
-import com.abc.location.dto.LocationDTO;
-import com.abc.location.enums.LocationResultEum;
-import com.abc.location.model.Location;
+import com.abc.location.vo.LocationVo;
+import com.abc.location.pojo.Location;
 import com.abc.location.service.LocationService;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.BeanUtils;
 import org.springframework.cache.annotation.CacheConfig;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
+import javax.annotation.Resource;
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
+
 
 /**
  * @author abcpan
@@ -24,24 +23,22 @@ import java.util.stream.Stream;
  */
 @Service
 @CacheConfig(cacheNames = {"LOCATION_CACHE"})
-@Slf4j
 public class LocationServiceImpl implements LocationService {
-    @Autowired
+    @Resource
     private LocationMapper locationMapper;
 
+    @Override
     @Cacheable(key="#code + '_' + #name")
     public CommonResponse selectLocation(Integer code,String name) {
-
         if(code != null){
-            log.info("query from database by code={}",code);
             return this.selectLocationByCode(code);
         }
         if(!StringUtils.isEmpty(name)){
-            log.info("query from database by name={}",name);
             return this.selectLocationByName(name);
         }
-        return CommonResponse.createError(LocationResultEum.PARAM_ILLEGAL.getCode(),LocationResultEum.PARAM_ILLEGAL.getMsg());
+        return this.selectAll();
     }
+
     /**
      * 行政区划编码查找
      * @param code
@@ -49,49 +46,86 @@ public class LocationServiceImpl implements LocationService {
      */
 
     private CommonResponse selectLocationByCode(final Integer code){
-        Set<Integer> set = this.groupCode(code);
-        List<Location> locations = locationMapper.selectLocationByKeys(set);
-        List<LocationDTO> result =  locations.stream()
-            .sorted()
-            .map(location->{
-            LocationDTO locationDTO = new LocationDTO();
-            Stream<String> stream= Arrays.asList(location.getProvinceName(),location.getCityName(),location.getCountyName()).stream();
-            String finalName = stream.filter(name-> !StringUtils.isEmpty(name)).collect(Collectors.joining());
-            locationDTO.setName(finalName);
-            locationDTO.setCode(location.getCode());
-            return locationDTO;
-        }).collect(Collectors.toList());
+       LocationVo ret = this.getCascade(code);
+       return CommonResponse.createData(List.of(ret));
+    }
+
+
+
+    /**
+     * 行政区划编码查找
+     * @param locationName
+     * @return
+     */
+    private CommonResponse selectLocationByName(String locationName){
+        List<Location> locationList = locationMapper.selectLocationByName(locationName);
+        List<LocationVo> result  = locationList.stream().map(item-> this.getCascade(item.getCode())).collect(Collectors.toList());
         return CommonResponse.createData(result);
     }
 
     /**
-     * 分类code 码
-     * @param code
+     * 全部搜索
      * @return
      */
-    private Set<Integer> groupCode(final Integer code){
-        Set<Integer> set = new HashSet<>();
-        Integer provinceCode = code/10000;
-        set.add(provinceCode*10000);
-        Integer cityCode = code/100;
-        set.add(cityCode*100);
-        set.add(code);
-        return set;
+    public CommonResponse selectAll() {
+        List<Location> dataSource = locationMapper.selectLocation();
+        List<LocationVo> result = dataSource.stream()
+            .filter(item -> item.getParentCode() == null)
+            .map(location -> {
+                LocationVo vo = new LocationVo();
+                BeanUtils.copyProperties(location, vo);
+                vo.setChildren(this.getChildren(location.getCode(), dataSource));
+                return vo;
+            }).collect(Collectors.toList());
+        return CommonResponse.createData(result);
+    }
+
+    public List<LocationVo> getChildren(Integer parentCode, List<Location> dataSource) {
+        return dataSource
+            .stream()
+            .parallel()
+            .filter(item -> parentCode.equals(item.getParentCode()) )
+            .map(location -> {
+                LocationVo vo = new LocationVo();
+                BeanUtils.copyProperties(location, vo);
+                vo.setChildren(this.getChildren(location.getCode(), dataSource));
+                return vo;
+            })
+            .collect(Collectors.toList());
+    }
+
+
+    /**
+     * 对结果进行级联
+     * @param locationCode
+     * @return
+     */
+    private LocationVo getCascade(Integer locationCode) {
+      LinkedList<LocationVo> result = this.getLocation(locationCode, null);
+       for(int i = 0; i < result.size() - 1; ++i) {
+           result.get(i).getChildren().add(result.get(i+1));
+       }
+       return result.get(0);
     }
 
     /**
-     * 通过名字查询地区
-     * @param name
+     *
+     * @param code
+     * @param family
      * @return
      */
-    private CommonResponse selectLocationByName(String name){
-        List<Location> resultList = locationMapper.selectLocationByName(name);
-        List<Object> ret = new ArrayList<>();
-        for(Location location:resultList){
-            Integer code = location.getCode();
-            CommonResponse result = this.selectLocationByCode(code);
-            ret.add(result.getData());
+    public LinkedList<LocationVo> getLocation(Integer code, LinkedList<LocationVo> family) {
+        Location location = locationMapper.selectLocationByKey(code);
+        LocationVo locationVo = new LocationVo();
+        BeanUtils.copyProperties(location, locationVo);
+        if(family == null) {
+            family = new LinkedList<>();
         }
-        return CommonResponse.createData(ret);
+        family.addFirst(locationVo);
+        Integer parentCode = location.getParentCode();
+        if(parentCode != null) {
+            this.getLocation(parentCode, family);
+        }
+        return family;
     }
 }
